# 6DOF-Inverse-Kinematic

./: .gitignore  Makefile  README.md  setup_and_start.sh  todo
Docker-ROS/: run_docker_from_hub.bat
instructions/: 01_Set_up_UR5.md  02_Set_up_UR5_joint_controller.md  03_How_to_controlle_tcp_position_with_code.md  03_Set_up_UR5_tcp_controller.md  04_CSV_data_generator.md  set_up_UR5.md
model_training/: readme.md  requirements.txt  test.ipynb  test_no_orientation.ipynb  test_with_orientation.ipynb  train.py  ur5_val_data_87k.csv
model_training/datasets/: dataset_csv.py
model_training/model_no_orientation/: test_no_orientation.ipynb  train.py  ur5_val_data_87k copy.csv
model_training/model_no_orientation/datasets/: dataset_csv.py
model_training/model_no_orientation/modules/: modules.py  sparsemax.py
model_training/modules/: modules.py
model_training/utils/: data_generator.py
notes/: 00_Error_stories.md  01_Tips.md
project files/: Instructions.md  arm_pose_data.csv  arm_poses_5000.csv
project files/instructions/: 02_Set_up_UR5_joint_controller.md  04_CSV_data_generator.md
src/: setup.sh
src/data_generator/: CMakeLists.txt  README.md  package.xml
src/data_generator/launch/: generator.launch
src/data_generator/scripts/: generator_node.py
src/pose_listener/: CMakeLists.txt  package.xml
src/pose_listener/src/: pose_listener.cpp
src/ur5-tcp-position-generator/: CMakeLists.txt  package.xml
src/ur5-tcp-position-generator/src/: ur5_cartesian_position_generator.cpp
src/user_input/: CMakeLists.txt  README.md  package.xml  setup.py
src/user_input/data/ur5/: arm_pose_data.csv  ur5_test_data.csv  ur5_train_data.csv
src/user_input/modules/orientation/: modules.py
src/user_input/modules/without/: modules.py
src/user_input/scripts/: user_input.py
src/user_input/src/: user_input.cpp
src/user_input/urdf/: ur5_robot.urdf
