<?xml version="1.0"?>
<package format="2">
  <name>data_generator</name>
  <version>0.0.1</version>
  <description>Generates CSV files from joint angle positions and tcp position</description>
  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
  <author email="ivanbirkmaier@todo.todo">Ivan Birkmaier</author>
  <maintainer email="ivanbirkmaier@todo.todo">Ivan Birkmaier</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
