<?xml version="1.0"?>
<package format="2">
  <name>pose_listener</name>
  <version>0.0.1</version>
  <description>The pose listener package collects and writes robot poses to a CSV file.</description>

  <maintainer email="nicolasflake@example.com">Nicolas Flake</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
