<?xml version="1.0"?>
<package format="2">
  <name>ur5-tcp-position-generator</name>
  <version>0.0.1</version>
  <description>The tcp position generator package</description>

  <author email="nicolasflake@todo.todo">Nicolas Flake</author>
  <maintainer email="nicolasflake@todo.todo">Nicolas Flake</maintainer>
  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>kdl</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>kdl</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>kdl</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <build_depend>cmake_modules</build_depend>
  <exec_depend>cmake_modules</exec_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend> 


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
