<?xml version="1.0"?>
<package format="2">
  <name>user_input</name>
  <version>0.0.1</version>
  <description>A ROS package for the User Input Node handling inverse kinematics using a pre-trained ML model.</description>

  <maintainer email="chiarababiak@todo.todo">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <!-- Python Dependencies -->
  <depend>python3-torch</depend>
  <exec_depend>python3-ikpy</exec_depend>


  <export>
    <!-- Other tools can request additional information here -->
  </export>
</package>
